--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
     <div id="app">
-        <ul>
-            <li>lista</li>
+        <ul v-for="(item, index) in mailArray">
+            <li>{{item}}</li>
         </ul>
     </div>
     <script src="js/script.js"></script>
